web-infras/parser/tests/fixtures/babel/es2022/class-properties/await-in-computed-property-in-params-of-async-arrow/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,21)
1|async( x = class { [await] = x }) => {}
 |                   ^
